[gd_scene load_steps=2 format=3 uid="uid://co24ufbs8g3pc"]

[ext_resource type="Script" path="res://ui/player_stats_ui.gd" id="1_ftcdd"]

[node name="PlayerStatsUI" type="Panel"]
custom_minimum_size = Vector2(320, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1670.0
offset_bottom = -780.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ftcdd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36

[node name="EffectsContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
